fix(home): fixed overlap

--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -144,7 +144,3 @@
   height: 100vh;
   overflow-y: scroll;
 }
-
-.yo {
-  position: relative !important;
-}
